--- a/KriterisEdit/t4.tt
+++ b/KriterisEdit/t4.tt
@@ -13,9 +13,27 @@
 <#@ import namespace="System.Xml.Linq" #>
 <#@ import namespace="System.Collections" #>
 <#@ import namespace="System.Linq" #>
+<#@ import namespace="System.Windows.Controls" #>
+<#@ import namespace="System.Windows" #>
+<#@ import namespace="System.Collections.Generic" #>
+<#@ import namespace="System.Reflection" #>
 using KriterisEdit;
-public static class CellDefs { 
+namespace KriterisEdit
+{
+public static partial class GlobalStatics { 
 <#
+    
+    var uie = typeof(UIElement);
+    typeof(DockPanel).Assembly.GetTypes().Where(t=>true
+                && uie.IsAssignableFrom(t) 
+                && t.IsPublic
+                && t.Namespace=="System.Windows.Controls"
+                && !t.IsGenericType
+                && t.GetConstructors(BindingFlags.Instance | BindingFlags.Public).Any()
+        )
+        .Select(t => 
+            $"public static {t.FullName} _{t.Name}() => new {t.FullName}();  "
+        ).ToList().ForEach(WriteLine);
 //     var nl = Environment.NewLine.ToCharArray();
 // @"
 // FileMask
@@ -26,4 +44,6 @@ public static class CellDefs {
 //     //var xe = XElement.Parse(file);
     
 #>
+
+}
 }
