--- a/playground/js/KriterisEngine/src/App.global.css
+++ b/playground/js/KriterisEngine/src/App.global.css
@@ -8,16 +8,16 @@ body {
   height: 100vh;
   background: linear-gradient(
     200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
+    #b7a4a4 -29.09%,
+    #97bc6f 51.77%,
+    #c177e9 129.35%
   );
   font-family: sans-serif;
   overflow-y: hidden;
   display: flex;
   justify-content: left;
-  margin: 3px;
-
+  margin: 0px;
+  padding: 0px;
 }
 
 button {
