--- a/playground/js/KriterisEngine/src/App.global.css
+++ b/playground/js/KriterisEngine/src/App.global.css
@@ -24,7 +24,7 @@ body {
   height: 100vh;
   width: 100vw;
 }
-button {
+buttonnn {
   background-color: white;
   padding: 10px 20px;
   margin: 10px;
