--- a/playground/js/kreact/src/index.css
+++ b/playground/js/kreact/src/index.css
@@ -24,3 +24,13 @@ pre {
     margin: 0;
     padding: 0;
 }
+
+.blink_me {
+    animation: blinker 1s linear infinite;
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
