cleanup / fix cursor showing up in virtual members

--- a/playground/js/kreact/src/index.css
+++ b/playground/js/kreact/src/index.css
@@ -27,6 +27,8 @@ pre {
 
 .blink_me {
     animation: blinker 1s linear infinite;
+    background-color: white;
+    color: black;
 }
 
 @keyframes blinker {
