--- a/playground/js/kreact-proxy/src/index.css
+++ b/playground/js/kreact-proxy/src/index.css
@@ -1,10 +1,12 @@
 html, body {
-
+    margin: 0px;
+    padding: 0px;
     overflow: hidden;
     height: 100%;
     width: 100%;
 }
 .root {
+
     height: 100%;
     width: 100%;
 }
