--- a/playground/js/kreact-proxy/src/index.css
+++ b/playground/js/kreact-proxy/src/index.css
@@ -15,3 +15,20 @@ html, body {
 button {
     margin-right: 1px;
 }
+
+.Grid {
+    border: 1px solid #d9dddd;
+}
+
+.GridItemEven,
+.GridItemOdd {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px;
+    margin: 0px
+}
+
+.GridItemEven {
+    background-color: #555555;
+}
