--- a/playground/js/kreact-proxy/src/index.css
+++ b/playground/js/kreact-proxy/src/index.css
@@ -22,7 +22,7 @@ button {
 
 .GridItemEven,
 .GridItemOdd {
-    display: flex;
+    display: inline-block;
     align-items: center;
     justify-content: center;
     padding: 0px;
@@ -30,5 +30,5 @@ button {
 }
 
 .GridItemEven {
-    background-color: #555555;
+    /*background-color: #555555;*/
 }
