add back custom arrow so i can hack in lifecycle

--- a/playground/js/JsSpreadsheetDOM/main.css
+++ b/playground/js/JsSpreadsheetDOM/main.css
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
 }
 .vh {
-    visibility: hidden;
+    visibility: collapse;
 }
 .dock-container-cols {
     display: flex;
