--- a/playground/js/JsSpreadsheetDOM/main.css
+++ b/playground/js/JsSpreadsheetDOM/main.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body {
     background-color: black;
     -webkit-filter: invert(100%);
@@ -19,6 +22,9 @@ body {
 }
 .vh {
     visibility: collapse;
+}
+.bb {
+    border: 1px solid rgba(0,255,0,0.2);
 }
 .dock-container-cols {
     display: flex;
