--- a/playground/js/VirtualizedDom/styles.css
+++ b/playground/js/VirtualizedDom/styles.css
@@ -9,10 +9,27 @@
 
 html, body {
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     background: #222728;
     color: #83ADFB;
+}
+button {
+    border:0 none transparent;
+    background: none;
+    box-shadow: none;
+    border-radius: 0px;
+    margin: 0;
+    padding: 0;
+}
+x-c {
+    display: inline-block;
+}
+#root {
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
 }
 body {
     /*display: flex;*/
