--- a/playground/js/VirtualizedDom/styles.css
+++ b/playground/js/VirtualizedDom/styles.css
@@ -26,10 +26,11 @@ button {
 x-c {
     display: inline-block;
 }
+.grid-stack-item-content {
+    background-color: rgba(58, 59, 63, 0.38);
+}
 #root {
-    width: 100%;
-    height: 100%;
-    flex-wrap: wrap;
+    background: rgba(8, 27, 57, 0.47);
 }
 body {
     /*display: flex;*/
